Fixed text wrapping in error/event log interface.

--- a/frontend/desktop/admin-css/error-log.css
+++ b/frontend/desktop/admin-css/error-log.css
@@ -26,6 +26,7 @@
 
 .table_cell {
     border: 1px solid black;
+    overflow-wrap: break-word;
 }
 
 .table_row {
